Fixed label flickering on hover bug

--- a/src/main/resources/edu/wpi/cs3733/D21/teamE/fxml/mainStyle.css
+++ b/src/main/resources/edu/wpi/cs3733/D21/teamE/fxml/mainStyle.css
@@ -200,7 +200,7 @@ JFXListView {
 
 }
 
-.floor-change-label {
+.floor-change Label{
     -fx-font-size: 10px;
     -fx-background-color: WHITE;
     -fx-background-radius: 5px;
@@ -209,6 +209,6 @@ JFXListView {
     -fx-border-width: 1px;
 }
 
-.floor-change-label:hover {
+.floor-change:hover Label{
     visibility: false;
 }
